# life-planner-lite

./: .dockerignore  Dockerfile  README.md  app.py  config.yaml  fly.toml  pyproject.toml
data/: snp500_monthly.csv
src/: main.py  planner.py  snp500.py
static/: index.html
tests/: test_planner.py  test_snp500.py
