[project]
name = "life-planner-lite"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
